fix z-index of calender

--- a/src/components/Common/alert/container.module.scss
+++ b/src/components/Common/alert/container.module.scss
@@ -15,13 +15,8 @@
 }
 
 
-.success title{
-   color: green; 
-   font-weight: 700;
-   font-size: 2.2rem;
-   margin-bottom: 4rem;
-}
-.error .title{
+
+.title{
     color: red;
     font-weight: 7000;
     font-size: 2rem;
