--- a/src/components/User/custom.scss
+++ b/src/components/User/custom.scss
@@ -5,6 +5,7 @@
     height: 35rem;
     min-height: auto;
     background-color: #FAFAFA;
+    z-index: -1;
 }
 .Calendar__day.-rtl{
     font-size: 1.8rem;
